@@ -1,6 +1,9 @@
-# mvn clean archetype:create-from-project -Darchetype.properties="archetype.properties" 
-# To deploy to Maven Central copy archetype-pom.xml to target/generated-sources/archetype 
-#   and change the version number
+# To deploy to Maven Central:
+#   1. Change version number in archetype.properties, archetype-pom.xml and pom.xml
+#   2. mvn clean archetype:create-from-project -Darchetype.properties="archetype.properties"
+#   3. Copy archetype-metadata.xml to target/generated-sources/archetype/src/main/resources/META-INF/maven
+#   4. Copy archetype-pom.xml to target/generated-sources/archetype and change the version number
+#   5. In target/generated-sources/archetype do: mvn clean deploy (don't miss the clean)
 
 archetype.groupId=org.openxava
 archetype.artifactId=openxava-master-detail-archetype
